@@ -9,17 +9,13 @@ DIST tkdiff_4_1_1.tar.gz 88450 RMD160 99b3f0e13b023415835952ac1f06f1f78edd9b7b S
 EBUILD tkdiff-4.1.1.ebuild 582 RMD160 c9660e96737ec295d20e2910aeda204c9ae22ca0 SHA1 80f39bc2f273747979d2827bddcd0a5948f58367 SHA256 c3ec81b54d379ed8f9a7ab8dc602f17ea6b3c2ad0eb664a47661f7444ab4e9fd
 EBUILD tkdiff-4.1.3.ebuild 568 RMD160 6fc70790bdc326d959ce78aa10586a76bd3faf19 SHA1 6a22a7447eb2f01323d5ee777951ef7cedfc8b7d SHA256 8458a66b4bbfde3c90fea27c17a65846f9a52a1ff987e35f6cef6708ef785fb7
 EBUILD tkdiff-4.1.4.ebuild 685 RMD160 7fa0fea14d81e7084b3dc37db497b25ea4346860 SHA1 998c4f2b80bcc917e36f73c24ce815181d2f11c0 SHA256 c73c391f0ca4ffc9a43d2790cc346e275ea352e541ad79bd666312339a577123
-EBUILD tkdiff-4.2.ebuild 587 RMD160 a1a76f72a73084df5eefaeda97abbd1013434498 SHA1 da64105065298aead5c0d41df346bdf63d45cded SHA256 be15eda578e5fa84fe9d4aded85e23962e522f8893757c901ec9a7918e9a2d6b
-MISC ChangeLog 2535 RMD160 2ebdf373bca765c3a28fb8e3ed9916b25737b2ea SHA1 932af360e3502d3121fd163eba26f11c28c86c4f SHA256 be85dce3603af1112d951201db237af72f2e5a3f448ef86e60cab212743c9460
+EBUILD tkdiff-4.2.ebuild 593 RMD160 a6b143d169686703b18cdbe52b43bc1e9198f757 SHA1 8b3596c79af5df135857a9aef6940a0fec8105c5 SHA256 2aa1a0d1187ea2ea4ed834792f2f4ab1535ffc3164516c98a9d53b8286c401c0
+MISC ChangeLog 2646 RMD160 4437510d133e0318c04ec8571814d3c6a5e229ba SHA1 7478902007faabba890fb24c4364142b05743765 SHA256 83ec525c06cd0e3290920a3f23d42a7253c9c34df1f82a246c67be303bd27e6a
 MISC metadata.xml 159 RMD160 0b3f1c7d1bf45f7283ab23b3d8fa0a02c688a044 SHA1 0446a3db32f76d33bf9f76b5229b2fd9900d08c6 SHA256 fe5eea9a276e11191a0c8e266e6dc128c3dd73347bb01020814acb0863316029
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPQ54sAAoJEOTDgjZ80txddkoIAIRa2v00aq05Q2o/lYh3pgs+
-9yQagRLDNZR3aKRCIFhgIlOJt4dYJiuNuLjsMKOcjwavOcDQQuFQ8TMtCFXTwKq0
-CX7oFkhRKXQzyeaOJ7jHk7n4mZ/bw3A41WbMFijDOMoSf8670tRNa2l8HNNtEc/0
-3CVn+5FDCIlYy+BLqxSj3VDUKiYxZw+/GU2UXXh741pn2OewZzHjSnj28C1EGN6z
-bHHFnjLjAt6sp2ROJwDUeLXOg9XJOmBBRO+GkgZtw7Wggkgc0MPGkwnknS5qqaB9
-/bWPVTx8r2ib9OKba2n0qLSCLZZGZaOjr8vR8NUX9VGdWUbpMHTBVZF508cdbR8=
-=RaZJ
+iEYEAREKAAYFAk9HmvAACgkQuUQtlDBCeQJTAACffCArMilTlZFfHurL0klvBc67
+kqsAnRywG8rvmeDvT/Opo9zh7sau3Nas
+=yZAK
 -----END PGP SIGNATURE-----
