@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/geany
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.48 2012/02/21 18:44:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.49 2012/02/24 14:11:01 phajdan.jr Exp $
+
+  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> geany-0.21.ebuild:
+  x86 stable wrt bug #404537
 
   21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> geany-0.21.ebuild:
   Stable for amd64, wrt bug #404537
