@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/geany-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/geany-plugins/ChangeLog,v 1.12 2012/02/21 18:45:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/geany-plugins/ChangeLog,v 1.13 2012/02/24 14:11:25 phajdan.jr Exp $
+
+  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  geany-plugins-0.21.1.ebuild:
+  x86 stable wrt bug #404537
 
   21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> geany-plugins-0.21.1.ebuild:
   Stable for amd64, wrt bug #404537
